--- a/EmbarkToTalk/src/app/lessons/shadowread/shadowread.page.html
+++ b/EmbarkToTalk/src/app/lessons/shadowread/shadowread.page.html
@@ -166,7 +166,7 @@
 </ion-content>
 
 
-<ion-footer>
+<ion-footer class="ion-no-border">
   <ion-toolbar>
     <!-- <ion-button (click)="onStartVoiceRecognition()" *ngIf="voiceActiveSectionDisabled">
       <ion-icon name="play-circle-outline"></ion-icon>
@@ -182,9 +182,9 @@
       <ion-row>
         <ion-col></ion-col>
         <ion-col >
-          <ion-button shape = "round" color = "white"
+          <ion-button color = "primary"
             (click)="onStartVoiceRecognition();" *ngIf="voiceActiveSectionDisabled; else voicesection;">
-            <ion-icon name="mic-outline" style = "font-size: 35px; color:rgb(71, 71, 71);"></ion-icon>
+            <ion-icon class="ion-padding" name="mic-outline" style = "font-size: 35px; color:white;"></ion-icon>
           </ion-button>          
         </ion-col>
         <ion-col >
@@ -193,7 +193,7 @@
           [radius]="20"
           [outerStrokeWidth]="4"
           [innerStrokeWidth]="5"
-          [outerStrokeColor]="'#3279a8'"
+          [outerStrokeColor]="'#d17d00'"
           [innerStrokeColor]="'#a4adb3'"
           [animation]="true"
           [animationDuration]="300"
@@ -202,9 +202,9 @@
         <!-- <ion-col></ion-col> -->
       </ion-row>
     
-      <ion-button (click) = "playFullActivity()">
+      <!-- <ion-button (click) = "playFullActivity()">
         Listen to conversation
-      </ion-button>
+      </ion-button> -->
 
     <!-- </ion-buttons> -->
     
@@ -215,15 +215,15 @@
             <ion-button color="danger" type="button" (click)="onCloseVoiceRecognition()">Close</ion-button>
             <ion-button color="success" type="button" (click)="onStartVoiceRecognition()">Restart</ion-button>
           </ion-buttons> -->
-          <ion-button color="white" shape = "round" (click) = "onStartVoiceRecognition()">
-            <ion-icon name="mic-outline" style = "font-size: 35px; color:rgb(71, 71, 71);"></ion-icon>
+          <ion-button color="primary" (click) = "onStartVoiceRecognition()">
+            <ion-icon class="ion-padding" name="mic-outline" style = "font-size: 35px; color:white;"></ion-icon>
           </ion-button>
         </ng-container>
         <ng-template #start>
           <ng-container *ngIf="voiceActiveSectionListening; else beginning" (click) = "onCloseVoiceRecognition">
             <!-- <span style="margin-left:10px"> -->
-              <ion-button shape = "round" color = "white" (click) = "onCloseVoiceRecognition();">
-                  <ion-icon name="mic-outline" style = "font-size: 35px; color: red" #changeColor></ion-icon>
+              <ion-button color = "light" (click) = "onCloseVoiceRecognition();">
+                  <ion-icon class="ion-padding" name="stop-circle-outline" style = "font-size: 35px; color: red" #changeColor></ion-icon>
                 <!-- <img src="../../assets/icon/stop-white.png" height="32px" width="32px"/> -->
               </ion-button>
             <!-- <img src="../../assets/icon/stop.png" height="40px" width="40px" /> -->
@@ -231,9 +231,9 @@
           </ng-container>
           <ng-template #beginning>
             <!-- <span style="margin-left:10px"> -->
-            <ion-button shape = "round" color = "white" (click) = "onCloseVoiceRecognition();">
+            <ion-button color = "light" (click) = "onCloseVoiceRecognition();">
               <!-- <img src="../../assets/icon/stop-white.png" height="32px" width="32px"/> -->
-                <ion-icon name="mic-outline" style = "font-size: 35px; color: red" #changeColor></ion-icon>
+                <ion-icon class="ion-padding" name="stop-circle-outline" style = "font-size: 35px; color: red" #changeColor></ion-icon>
               <!-- <ion-icon name="stop-circle-outline" style = "font-size: 40px"></ion-icon> -->
             </ion-button>
             <!-- </span> -->
@@ -241,8 +241,8 @@
         </ng-template>
       </ng-container>
       <ng-template #failure>
-        <ion-button color="white" shape = "round" (click) = "onStartVoiceRecognition()">
-          <ion-icon name="mic-outline" style = "font-size: 35px; color:rgb(71, 71, 71);"></ion-icon>
+        <ion-button color="primary" (click) = "onStartVoiceRecognition()">
+          <ion-icon class="ion-padding" name="mic-outline" style = "font-size: 35px; color:white;"></ion-icon>
         </ion-button>
       </ng-template>
     </ng-template>
