--- a/EmbarkToTalk/src/theme/variables.scss
+++ b/EmbarkToTalk/src/theme/variables.scss
@@ -1,236 +1,160 @@
 // Ionic Variables and Theming. For more info, please see:
 // http://ionicframework.com/docs/theming/
+// Font path is used to include ionicons,
+// roboto, and noto sans fonts
+// $font-path: '../..'; //TODO ionic4??
 
+// The app direction is used to include
+// rtl styles in your app. For more info, please see:
+// http://ionicframework.com/docs/theming/rtl-support/
+// $app-direction: ltr; //TODO ionic4??
+
+// App iOS Variables
+// --------------------------------------------------
+// iOS only Sass variables can go here
+
+$toolbar-ios-height: 60px;
+$font-family-ios-base: "open sans";
+$item-ios-detail-push-color: var(--dark);
+$item-md-detail-push-show: true;
+$item-md-detail-push-color: var(--dark);
+$card-ios-border-radius: 6px;
+$card-md-border-radius: 6px;
+
+// App Material Design Variables
+// --------------------------------------------------
+// Material Design only Sass variables can go here
+
+$font-family-md-base: "open sans";
+$segment-button-md-border-color-activated: transparent;
+$segment-button-md-font-size: 16px;
+$segment-button-md-padding-top: 5px;
+$segment-button-md-border-bottom-width: 4px;
+$text-input-md-show-valid-highlight: true;
+$text-input-md-highlight-color-invalid: var(--primary);
+$text-input-md-highlight-color-valid: var(--primary);
+$text-input-md-show-invalid-highlight: var(--primary);
+$text-input-md-highlight-color: var(--primary);
+$text-input-md-show-valid-highlight: var(--primary);
+$card-md-font-size: 16px;
+$item-md-thumbnail-size: 60px;
+
+/******included in ionic 4 template********/
 /** Ionic CSS Variables **/
 :root {
-  /** primary **/
-  --ion-color-primary: #3880ff;
-  --ion-color-primary-rgb: 56, 128, 255;
-  --ion-color-primary-contrast: #ffffff;
-  --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-background-color: var(--transparent);
+  --ion-toolbar-background: var(--transparent);
+  --ion-tab-bar-background: var(--light);
+  --ion-tab-bar-color: var(--coin);
+  --ion-item-background: var(--light);
+  --ion-item-background-activated: var(--transparent);
+  --ion-backdrop-color: var(--dark);
+  --ion-font-family: "open sans", "Helvetica Neue", "sans-serif";
+  --text-input-highlight-color-valid: var(--primary);
+  --placeholder-color: var(--medium);
+  --h1-font-size: 20px;
+  --ion-text-color: var(--dark);
+  --border-radius: 6px;
+  --ion-safe-area-top: 0px;
+  --ion-statusbar-padding: 0px;
+  --box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+    0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  --primary: #ff9800; // honey
+  --ion-color-primary: #ff9800;
+  --ion-color-primary-rgb: 255, 152, 0;
+  --ion-color-primary-contrast: #fafafa;
+  --ion-color-primary-contrast-rgb: 250, 250, 250;
+  --ion-color-primary-shade: #e08600;
+  --ion-color-primary-tint: #ffa21a;
 
-  /** secondary **/
-  --ion-color-secondary: #3dc2ff;
-  --ion-color-secondary-rgb: 61, 194, 255;
-  --ion-color-secondary-contrast: #ffffff;
-  --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #36abe0;
-  --ion-color-secondary-tint: #50c8ff;
-
-  /** tertiary **/
-  --ion-color-tertiary: #5260ff;
-  --ion-color-tertiary-rgb: 82, 96, 255;
-  --ion-color-tertiary-contrast: #ffffff;
-  --ion-color-tertiary-contrast-rgb: 255, 255, 255;
-  --ion-color-tertiary-shade: #4854e0;
-  --ion-color-tertiary-tint: #6370ff;
-
-  /** success **/
-  --ion-color-success: #2dd36f;
-  --ion-color-success-rgb: 45, 211, 111;
-  --ion-color-success-contrast: #ffffff;
-  --ion-color-success-contrast-rgb: 255, 255, 255;
-  --ion-color-success-shade: #28ba62;
-  --ion-color-success-tint: #42d77d;
-
-  /** warning **/
-  --ion-color-warning: #ffc409;
-  --ion-color-warning-rgb: 255, 196, 9;
+  --warning: #f4f4f4; // disabled background
+  --ion-color-warning: #f4f4f4;
+  --ion-color-warning-rgb: 244, 244, 244;
   --ion-color-warning-contrast: #000000;
   --ion-color-warning-contrast-rgb: 0, 0, 0;
-  --ion-color-warning-shade: #e0ac08;
-  --ion-color-warning-tint: #ffca22;
+  --ion-color-warning-shade: #d7d7d7;
+  --ion-color-warning-tint: #f5f5f5;
+  --ion-color-base: var(--transparent);
 
-  /** danger **/
-  --ion-color-danger: #eb445a;
-  --ion-color-danger-rgb: 235, 68, 90;
-  --ion-color-danger-contrast: #ffffff;
-  --ion-color-danger-contrast-rgb: 255, 255, 255;
-  --ion-color-danger-shade: #cf3c4f;
-  --ion-color-danger-tint: #ed576b;
+  --transparent: transparent;
+  --ion-color-transparent: transparent;
+  --ion-color-transparent-rgb: transparent;
+  --ion-color-transparent-contrast: transparent;
+  --ion-color-transparent-contrast-rgb: transparent;
+  --ion-color-transparent-shade: transparent;
+  --ion-color-transparent-tint: transparent;
 
-  /** dark **/
-  --ion-color-dark: #222428;
-  --ion-color-dark-rgb: 34, 36, 40;
-  --ion-color-dark-contrast: #ffffff;
-  --ion-color-dark-contrast-rgb: 255, 255, 255;
-  --ion-color-dark-shade: #1e2023;
-  --ion-color-dark-tint: #383a3e;
+  --success: #64b58a; // fern
+  --ion-color-success: #64b58a;
+  --ion-color-success-rgb: 100, 181, 138;
+  --ion-color-success-contrast: var(--ion-color-light);
+  --ion-color-success-contrast-rgb: 250, 250, 250;
+  --ion-color-success-shade: #589f79;
+  --ion-color-success-tint: #74bc96;
 
-  /** medium **/
-  --ion-color-medium: #92949c;
-  --ion-color-medium-rgb: 146, 148, 156;
-  --ion-color-medium-contrast: #ffffff;
-  --ion-color-medium-contrast-rgb: 255, 255, 255;
-  --ion-color-medium-shade: #808289;
-  --ion-color-medium-tint: #9d9fa6;
+  --danger: #d13b4c; // cherry
+  --ion-color-danger: #d13b4c;
+  --ion-color-danger-rgb: 209, 59, 76;
+  --ion-color-danger-contrast: var(--ion-color-light);
+  --ion-color-danger-contrast-rgb: 250, 250, 250;
+  --ion-color-danger-shade: #b83443;
+  --ion-color-danger-tint: #d64f5e;
 
-  /** light **/
-  --ion-color-light: #f4f5f8;
-  --ion-color-light-rgb: 244, 245, 248;
-  --ion-color-light-contrast: #000000;
-  --ion-color-light-contrast-rgb: 0, 0, 0;
-  --ion-color-light-shade: #d7d8da;
-  --ion-color-light-tint: #f5f6f9;
+  --dark: #424242; // charcoal
+  --ion-color-dark: #424242;
+  --ion-color-dark-rgb: 66, 66, 66;
+  --ion-color-dark-contrast: var(--ion-color-light);
+  --ion-color-dark-contrast-rgb: 250, 250, 250;
+  --ion-color-dark-shade: #3a3a3a;
+  --ion-color-dark-tint: #555555;
+
+  --medium: #d1d3d4;
+  --ion-color-medium: #d1d3d4;
+  --ion-color-medium-rgb: 189, 189, 189;
+  --ion-color-medium-contrast: var(--ion-color-dark);
+  --ion-color-medium-contrast-rgb: 66, 66, 66;
+  --ion-color-medium-shade: #a6a6a6;
+  --ion-color-medium-tint: #c4c4c4;
+
+  --light: #fafafa;
+  --ion-color-light: #fafafa;
+  --ion-color-light-rgb: 250, 250, 250;
+  --ion-color-light-contrast: var(--ion-color-dark);
+  --ion-color-light-contrast-rgb: 66, 66, 66;
+  --ion-color-light-shade: #dcdcdc;
+  --ion-color-light-tint: #fbfbfb;
+
+  // New colors
+  --ion-color-disabled: #f4f4f4;
+  --ion-color-disabled-rgb: 244, 244, 244;
+  --ion-color-disabled-contrast: #a5a5a5;
+  --ion-color-disabled-contrast-rgb: rgb(165, 165, 165);
+  --ion-color-disabled-shade: #d7d7d7;
+  --ion-color-disabled-tint: #f5f5f5;
+
+  --ion-color-coin: #8a8a8a;
+  --ion-color-coin-rgb: 138, 138, 138;
+  --ion-color-coin-contrast: #000000;
+  --ion-color-coin-contrast-rgb: 0, 0, 0;
+  --ion-color-coin-shade: #797979;
+  --ion-color-coin-tint: #969696;
 }
 
-@media (prefers-color-scheme: dark) {
-  /*
-   * Dark Colors
-   * -------------------------------------------
-   */
+// New Colors implementation
+.ion-color-disabled {
+  --ion-color-base: var(--ion-color-disabled);
+  --ion-color-base-rgb: var(--ion-color-disabled-rgb);
+  --ion-color-contrast: var(--ion-color-disabled-contrast);
+  --ion-color-contrast-rgb: var(--ion-color-disabled-contrast-rgb);
+  --ion-color-shade: var(--ion-color-disabled-shade);
+  --ion-color-tint: var(--ion-color-disabled-tint);
+}
 
-  body {
-    --ion-color-primary: #428cff;
-    --ion-color-primary-rgb: 66,140,255;
-    --ion-color-primary-contrast: #ffffff;
-    --ion-color-primary-contrast-rgb: 255,255,255;
-    --ion-color-primary-shade: #3a7be0;
-    --ion-color-primary-tint: #5598ff;
-
-    --ion-color-secondary: #50c8ff;
-    --ion-color-secondary-rgb: 80,200,255;
-    --ion-color-secondary-contrast: #ffffff;
-    --ion-color-secondary-contrast-rgb: 255,255,255;
-    --ion-color-secondary-shade: #46b0e0;
-    --ion-color-secondary-tint: #62ceff;
-
-    --ion-color-tertiary: #6a64ff;
-    --ion-color-tertiary-rgb: 106,100,255;
-    --ion-color-tertiary-contrast: #ffffff;
-    --ion-color-tertiary-contrast-rgb: 255,255,255;
-    --ion-color-tertiary-shade: #5d58e0;
-    --ion-color-tertiary-tint: #7974ff;
-
-    --ion-color-success: #2fdf75;
-    --ion-color-success-rgb: 47,223,117;
-    --ion-color-success-contrast: #000000;
-    --ion-color-success-contrast-rgb: 0,0,0;
-    --ion-color-success-shade: #29c467;
-    --ion-color-success-tint: #44e283;
-
-    --ion-color-warning: #ffd534;
-    --ion-color-warning-rgb: 255,213,52;
-    --ion-color-warning-contrast: #000000;
-    --ion-color-warning-contrast-rgb: 0,0,0;
-    --ion-color-warning-shade: #e0bb2e;
-    --ion-color-warning-tint: #ffd948;
-
-    --ion-color-danger: #ff4961;
-    --ion-color-danger-rgb: 255,73,97;
-    --ion-color-danger-contrast: #ffffff;
-    --ion-color-danger-contrast-rgb: 255,255,255;
-    --ion-color-danger-shade: #e04055;
-    --ion-color-danger-tint: #ff5b71;
-
-    --ion-color-dark: #f4f5f8;
-    --ion-color-dark-rgb: 244,245,248;
-    --ion-color-dark-contrast: #000000;
-    --ion-color-dark-contrast-rgb: 0,0,0;
-    --ion-color-dark-shade: #d7d8da;
-    --ion-color-dark-tint: #f5f6f9;
-
-    --ion-color-medium: #989aa2;
-    --ion-color-medium-rgb: 152,154,162;
-    --ion-color-medium-contrast: #000000;
-    --ion-color-medium-contrast-rgb: 0,0,0;
-    --ion-color-medium-shade: #86888f;
-    --ion-color-medium-tint: #a2a4ab;
-
-    --ion-color-light: #222428;
-    --ion-color-light-rgb: 34,36,40;
-    --ion-color-light-contrast: #ffffff;
-    --ion-color-light-contrast-rgb: 255,255,255;
-    --ion-color-light-shade: #1e2023;
-    --ion-color-light-tint: #383a3e;
-  }
-
-  /*
-   * iOS Dark Theme
-   * -------------------------------------------
-   */
-
-  .ios body {
-    --ion-background-color: #000000;
-    --ion-background-color-rgb: 0,0,0;
-
-    --ion-text-color: #ffffff;
-    --ion-text-color-rgb: 255,255,255;
-
-    --ion-color-step-50: #0d0d0d;
-    --ion-color-step-100: #1a1a1a;
-    --ion-color-step-150: #262626;
-    --ion-color-step-200: #333333;
-    --ion-color-step-250: #404040;
-    --ion-color-step-300: #4d4d4d;
-    --ion-color-step-350: #595959;
-    --ion-color-step-400: #666666;
-    --ion-color-step-450: #737373;
-    --ion-color-step-500: #808080;
-    --ion-color-step-550: #8c8c8c;
-    --ion-color-step-600: #999999;
-    --ion-color-step-650: #a6a6a6;
-    --ion-color-step-700: #b3b3b3;
-    --ion-color-step-750: #bfbfbf;
-    --ion-color-step-800: #cccccc;
-    --ion-color-step-850: #d9d9d9;
-    --ion-color-step-900: #e6e6e6;
-    --ion-color-step-950: #f2f2f2;
-
-    --ion-item-background: #000000;
-
-    --ion-card-background: #1c1c1d;
-  }
-
-  .ios ion-modal {
-    --ion-background-color: var(--ion-color-step-100);
-    --ion-toolbar-background: var(--ion-color-step-150);
-    --ion-toolbar-border-color: var(--ion-color-step-250);
-  }
-
-
-  /*
-   * Material Design Dark Theme
-   * -------------------------------------------
-   */
-
-  .md body {
-    --ion-background-color: #121212;
-    --ion-background-color-rgb: 18,18,18;
-
-    --ion-text-color: #ffffff;
-    --ion-text-color-rgb: 255,255,255;
-
-    --ion-border-color: #222222;
-
-    --ion-color-step-50: #1e1e1e;
-    --ion-color-step-100: #2a2a2a;
-    --ion-color-step-150: #363636;
-    --ion-color-step-200: #414141;
-    --ion-color-step-250: #4d4d4d;
-    --ion-color-step-300: #595959;
-    --ion-color-step-350: #656565;
-    --ion-color-step-400: #717171;
-    --ion-color-step-450: #7d7d7d;
-    --ion-color-step-500: #898989;
-    --ion-color-step-550: #949494;
-    --ion-color-step-600: #a0a0a0;
-    --ion-color-step-650: #acacac;
-    --ion-color-step-700: #b8b8b8;
-    --ion-color-step-750: #c4c4c4;
-    --ion-color-step-800: #d0d0d0;
-    --ion-color-step-850: #dbdbdb;
-    --ion-color-step-900: #e7e7e7;
-    --ion-color-step-950: #f3f3f3;
-
-    --ion-item-background: #1e1e1e;
-
-    --ion-toolbar-background: #1f1f1f;
-
-    --ion-tab-bar-background: #1f1f1f;
-
-    --ion-card-background: #1e1e1e;
-  }
+.ion-color-coin {
+  --ion-color-base: var(--ion-color-coin);
+  --ion-color-base-rgb: var(--ion-color-coin-rgb);
+  --ion-color-contrast: var(--ion-color-coin-contrast);
+  --ion-color-contrast-rgb: var(--ion-color-coin-contrast-rgb);
+  --ion-color-shade: var(--ion-color-coin-shade);
+  --ion-color-tint: var(--ion-color-coin-tint);
 }
